# sd_proj1

./: .gitignore  main.py  pyproject.toml  txt_gen.py
map_reduce/: mapper.py  redis_config.py  reducer.py  shuffle.py  utils.py
