[project]
name = "sd-proj1"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Andrade de Araújo",email = "andradedearaujo100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
